# briefmatch

./: CMakeLists.txt  LICENSE  README.md  briefmatch.cpp  briefmatch.h  config.h.in  main.cpp  of_pipeline.cpp  of_pipeline.h
kernels/: briefmatch_cuda.cu  briefmatch_cuda.h  util_cuda.cu  util_cuda.h
util/: arg_parser.cpp  arg_parser.h  colorcode.cpp
util/imageLib/: ImageIOpng.cpp  README.txt
